# embedmq

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  README_CN.md
.github/workflows/: ci.yml
.history/: CLAUDE_20260615103452.md  CLAUDE_20260615112326.md
docs/: API.md  API_CN.md  BUILD.md  BUILD_CN.md  DESIGN.md  DESIGN_CN.md
examples/: basic.c  basic_cpp.cpp  benchmark.c
include/: embedmq.h  embedmq.hpp
pal/: embedmq_pal.h
pal/freertos/: embedmq_pal.c
pal/linux/: embedmq_pal.c
pal/none/: embedmq_pal.c
sim/freertos/: CMakeLists.txt  FreeRTOSConfig.h  main.c
src/: embedmq.c  embedmq_hash.c  embedmq_internal.h  embedmq_queue.c
tests/: test_embedmq.c  test_embedmq_cpp.cpp
